frame/support/test/tests/construct_runtime_ui/undefined_validate_unsigned_part.stderr
error: `Pallet` does not have #[pallet::validate_unsigned] defined, perhaps you should remove `ValidateUnsigned` from construct_runtime?
  --> tests/construct_runtime_ui/undefined_validate_unsigned_part.rs:5:1
   |
5  |   #[frame_support::pallet]
   |   ^^^^^^^^^^^^^^^^^^^^^^^^
...
49 | / construct_runtime! {
50 | |     pub struct Runtime
51 | |     {
52 | |         System: frame_system::{Pallet, Call, Storage, Config, Event<T>},
53 | |         Pallet: pallet::{Pallet, ValidateUnsigned},
54 | |     }
55 | | }
   | |_- in this macro invocation
   |
   = note: this error originates in the macro `pallet::__substrate_validate_unsigned_check::is_validate_unsigned_part_defined` which comes from the expansion of the macro `construct_runtime` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0437]: type `BlockNumber` is not a member of trait `frame_system::Config`
  --> tests/construct_runtime_ui/undefined_validate_unsigned_part.rs:26:2
   |
26 |     type BlockNumber = u32;
   |     ^^^^^^^^^^^^^^^^^^^^^^^ not a member of trait `frame_system::Config`

error[E0599]: no variant or associated item named `Pallet` found for enum `RuntimeCall` in the current scope
  --> tests/construct_runtime_ui/undefined_validate_unsigned_part.rs:53:3
   |
49 | // construct_runtime! {
50 | ||     pub struct Runtime
51 | ||     {
52 | ||         System: frame_system::{Pallet, Call, Storage, Config, Event<T>},
53 | ||         Pallet: pallet::{Pallet, ValidateUnsigned},
   | ||        -^^^^^^ variant or associated item not found in `RuntimeCall`
   | ||________|
   | |
54 | |      }
55 | |  }
   | |__- variant or associated item `Pallet` not found for this enum

error[E0599]: no function or associated item named `pre_dispatch` found for struct `pallet::Pallet` in the current scope
  --> tests/construct_runtime_ui/undefined_validate_unsigned_part.rs:49:1
   |
11 |       pub struct Pallet<T>(_);
   |       -------------------- function or associated item `pre_dispatch` not found for this struct
...
49 |   construct_runtime! {
   |  _^
50 | |     pub struct Runtime
51 | |     {
52 | |         System: frame_system::{Pallet, Call, Storage, Config, Event<T>},
53 | |         Pallet: pallet::{Pallet, ValidateUnsigned},
54 | |     }
55 | | }
   | |_^ function or associated item not found in `Pallet<Runtime>`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following traits define an item `pre_dispatch`, perhaps you need to implement one of them:
           candidate #1: `SignedExtension`
           candidate #2: `ValidateUnsigned`
   = note: this error originates in the macro `construct_runtime` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no function or associated item named `validate_unsigned` found for struct `pallet::Pallet` in the current scope
  --> tests/construct_runtime_ui/undefined_validate_unsigned_part.rs:49:1
   |
11 |       pub struct Pallet<T>(_);
   |       -------------------- function or associated item `validate_unsigned` not found for this struct
...
49 |   construct_runtime! {
   |  _^
50 | |     pub struct Runtime
51 | |     {
52 | |         System: frame_system::{Pallet, Call, Storage, Config, Event<T>},
53 | |         Pallet: pallet::{Pallet, ValidateUnsigned},
54 | |     }
55 | | }
   | |_^ function or associated item not found in `Pallet<Runtime>`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following traits define an item `validate_unsigned`, perhaps you need to implement one of them:
           candidate #1: `SignedExtension`
           candidate #2: `ValidateUnsigned`
   = note: this error originates in the macro `construct_runtime` (in Nightly builds, run with -Z macro-backtrace for more info)
